--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@
     width: 250px;
     padding: 5px;
 }
+
+@media screen and (max-width: 480px){
+    #sign-area{
+        width: 300px;
+    }
+}
